crates/fluvio-connector-derive/tests/ui/struct_without_config.stderr
error: struct must be annotated as config, e.g. '#[connector(config)]'
 --> tests/ui/struct_without_config.rs:7:1
  |
7 | struct CustomConfig {}
  | ^^^^^^

error[E0412]: cannot find type `CustomConfig` in this scope
 --> tests/ui/struct_without_config.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `CustomConfig`
 --> tests/ui/struct_without_config.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ use of undeclared type `CustomConfig`

error[E0308]: mismatched types
 --> tests/ui/struct_without_config.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `fluvio::producer::TopicProducer`
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          -------- arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/struct_without_config.rs:4:10
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          ^^^^^^^^                       ------------
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be used in an async block that returns `Result` or `Option` (or another type that implements `FromResidual`)
 --> tests/ui/struct_without_config.rs:3:20
  |
3 | #[connector(source)]
  | -------------------^
  | |                  |
  | |                  cannot use the `?` operator in an async block that returns `()`
  | this function should return `Result` or `Option` to accept `?`
  |
  = help: the trait `FromResidual<Result<Infallible, anyhow::Error>>` is not implemented for `()`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be applied to values that implement `Try`
 --> tests/ui/struct_without_config.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `()`
  |
  = help: the trait `Try` is not implemented for `()`
